--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -363,8 +363,8 @@ services:
       keep_configs_updated: True
       mntc_config_location: '/etc/haproxy/haproxy_mntc.cfg'
     target_ports:
-      http: '{% if nodes | select("is_balancer") | first %}20080{% else %}80{% endif %}'
-      https: '{% if nodes | select("is_balancer") | first %}20443{% else %}443{% endif %}'
+      http: '{% if nodes | select("is_balancer") | reject("is_remove_node") | first %}20080{% else %}80{% endif %}'
+      https: '{% if nodes | select("is_balancer") | reject("is_remove_node") | first %}20443{% else %}443{% endif %}'
 
   packages:
     cache_versions: true
@@ -578,7 +578,7 @@ plugins:
             pods:
               - ingress-nginx-controller
     config_map:
-      use-proxy-protocol: '{% if nodes | select("is_balancer") | first %}true{% else %}false{% endif %}'
+      use-proxy-protocol: '{% if nodes | select("is_balancer") | reject("is_remove_node") | first %}true{% else %}false{% endif %}'
     webhook:
       image: 'ingress-nginx/kube-webhook-certgen:{{ globals.compatibility_map.software["nginx-ingress-controller"][services.kubeadm.kubernetesVersion]["webhook-version"] }}'
       # resources values are based on https://github.com/kubernetes/ingress-nginx/blob/helm-chart-4.7.1/charts/ingress-nginx/values.yaml#L598
