Implement Calico API server installation

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -436,21 +436,28 @@ plugins:
             method: apply_yaml
             arguments:
               plugin_name: calico
+        - python:
+            module: plugins/builtin.py
+            method: apply_yaml
+            arguments:
+              plugin_name: calico
+              manifest_id: apiserver
+        - python:
+            module: plugins/calico.py
+            method: renew_apiserver_certificate
         - expect:
             daemonsets:
               - calico-node
             deployments:
               - calico-kube-controllers
+              - name: calico-apiserver
+                namespace: calico-apiserver
             pods:
-              list:
-                - coredns
-                - calico-kube-controllers
-                - calico-node
+              - coredns
+              - calico-kube-controllers
+              - calico-node
+              - calico-apiserver
         - thirdparty: /usr/bin/calicoctl
-        - shell:
-            command: mkdir -p /etc/calico
-            groups: ['control-plane']
-            sudo: true
         - template:
             source: templates/plugins/calicoctl.cfg.j2
             destination: /etc/calico/calicoctl.cfg
@@ -463,18 +470,22 @@ plugins:
         - template:
             source: templates/plugins/calico-rr.sh.j2
             destination: /tmp/calico_rr.sh
-            apply_required: true
             apply_command: /bin/sh /tmp/calico_rr.sh
-            sudo: true
         - expect:
             daemonsets:
               - calico-node
             deployments:
               - calico-kube-controllers
+              - name: calico-apiserver
+                namespace: calico-apiserver
             pods:
               - coredns
               - calico-kube-controllers
               - calico-node
+              - calico-apiserver
+        - python:
+            module: plugins/calico.py
+            method: expect_apiserver
     mode: ipip
     crossSubnet: true
     natOutgoing: true
@@ -552,6 +563,17 @@ plugins:
           memory: 128Mi
     flexvol:
       image: 'calico/pod2daemon-flexvol:{{ plugins.calico.version }}'
+    apiserver:
+      image: 'calico/apiserver:{{ plugins.calico.version }}'
+      nodeSelector:
+        kubernetes.io/os: linux
+      resources:
+        requests:
+          cpu: 50m
+          memory: 100Mi
+        limits:
+          cpu: 100m
+          memory: 200Mi
 
   nginx-ingress-controller:
     version: '{{ globals.compatibility_map.software["nginx-ingress-controller"][services.kubeadm.kubernetesVersion].version }}'
