Add comments and docs about Calico API server auditing.

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -198,6 +198,7 @@ services:
         # Don't log read-only requests
         - level: None
           verbs: ["watch", "get", "list"]
+        # Don't log checking API access by Calico API server
         - level: None
           users: ["system:serviceaccount:calico-apiserver:calico-apiserver"]
           verbs: ["create"]
