add new containerd format support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "paramiko==2.11.*",
     "jsonschema==4.17.*",
     "typing_extensions==4.7.*",
+    "pathvalidate==3.2.*"
 ]
 requires-python = ">=3.7"
 
