--- a/examples/cluster.yaml/allinone-cluster-ol7.yaml
+++ b/examples/cluster.yaml/allinone-cluster-ol7.yaml
@@ -1,3 +1,5 @@
+apiVersion: v1
+
 node_defaults:
   keyfile: /home/user/id_rsa
   password: '{{ env.PASS }}'     #Either keyfile or password can be used.
