--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -23,14 +23,20 @@ kube-apiserver:
     version: v1.26.4
   v1.26.7:
     version: v1.26.7
+  v1.26.11:
+    version: v1.26.11
   v1.27.1:
     version: v1.27.1
   v1.27.4:
     version: v1.27.4
+  v1.27.8:
+    version: v1.27.8
   v1.28.0:
     version: v1.28.0
   v1.28.3:
     version: v1.28.3
+  v1.28.4:
+    version: v1.28.4
 kube-controller-manager:
   v1.23.1:
     version: v1.23.1
@@ -54,14 +60,20 @@ kube-controller-manager:
     version: v1.26.4
   v1.26.7:
     version: v1.26.7
+  v1.26.11:
+    version: v1.26.11
   v1.27.1:
     version: v1.27.1
   v1.27.4:
     version: v1.27.4
+  v1.27.8:
+    version: v1.27.8
   v1.28.0:
     version: v1.28.0
   v1.28.3:
     version: v1.28.3
+  v1.28.4:
+    version: v1.28.4
 kube-scheduler:
   v1.23.1:
     version: v1.23.1
@@ -85,14 +97,20 @@ kube-scheduler:
     version: v1.26.4
   v1.26.7:
     version: v1.26.7
+  v1.26.11:
+    version: v1.26.11
   v1.27.1:
     version: v1.27.1
   v1.27.4:
     version: v1.27.4
+  v1.27.8:
+    version: v1.27.8
   v1.28.0:
     version: v1.28.0
   v1.28.3:
     version: v1.28.3
+  v1.28.4:
+    version: v1.28.4
 kube-proxy:
   v1.23.1:
     version: v1.23.1
@@ -116,14 +134,20 @@ kube-proxy:
     version: v1.26.4
   v1.26.7:
     version: v1.26.7
+  v1.26.11:
+    version: v1.26.11
   v1.27.1:
     version: v1.27.1
   v1.27.4:
     version: v1.27.4
+  v1.27.8:
+    version: v1.27.8
   v1.28.0:
     version: v1.28.0
   v1.28.3:
     version: v1.28.3
+  v1.28.4:
+    version: v1.28.4
 pause:
   v1.23.1:
     version: '3.6'
@@ -147,13 +171,19 @@ pause:
     version: '3.9'
   v1.26.7:
     version: '3.9'
+  v1.26.11:
+    version: '3.9'
   v1.27.1:
     version: '3.9'
   v1.27.4:
     version: '3.9'
+  v1.27.8:
+    version: '3.9'
   v1.28.0:
     version: '3.9'
   v1.28.3:
+    version: '3.9'
+  v1.28.4:
     version: '3.9'
 etcd:
   v1.23.1:
@@ -178,13 +208,19 @@ etcd:
     version: 3.5.6-0
   v1.26.7:
     version: 3.5.6-0
+  v1.26.11:
+    version: 3.5.9-0
   v1.27.1:
     version: 3.5.7-0
   v1.27.4:
     version: 3.5.7-0
+  v1.27.8:
+    version: 3.5.9-0
   v1.28.0:
     version: 3.5.9-0
   v1.28.3:
+    version: 3.5.9-0
+  v1.28.4:
     version: 3.5.9-0
 coredns/coredns:
   v1.23.1:
@@ -209,11 +245,17 @@ coredns/coredns:
     version: v1.9.3
   v1.26.7:
     version: v1.9.3
+  v1.26.11:
+    version: v1.9.3
   v1.27.1:
     version: v1.10.1
   v1.27.4:
     version: v1.10.1
+  v1.27.8:
+    version: v1.10.1
   v1.28.0:
     version: v1.10.1
   v1.28.3:
+    version: v1.10.1
+  v1.28.4:
     version: v1.10.1
