--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -80,30 +80,48 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.24
     crictl: v1.27.1
+  v1.26.11:
+    calico: v3.26.4
+    nginx-ingress-controller: v1.8.4
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.25
+    crictl: v1.28.0
   v1.27.1:
-    calico: v3.26.1
-    nginx-ingress-controller: v1.8.1
+    calico: v3.26.4
+    nginx-ingress-controller: v1.8.4
     kubernetes-dashboard: v2.7.0
-    local-path-provisioner: v0.0.24
-    crictl: v1.27.1
+    local-path-provisioner: v0.0.25
+    crictl: v1.28.0
   v1.27.4:
-    calico: v3.26.1
-    nginx-ingress-controller: v1.8.1
+    calico: v3.26.4
+    nginx-ingress-controller: v1.8.4
     kubernetes-dashboard: v2.7.0
-    local-path-provisioner: v0.0.24
-    crictl: v1.27.1
+    local-path-provisioner: v0.0.25
+    crictl: v1.28.0
+  v1.27.8:
+    calico: v3.26.4
+    nginx-ingress-controller: v1.8.4
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.25
+    crictl: v1.28.0
   v1.28.0:
-    calico: v3.26.1
-    nginx-ingress-controller: v1.8.1
+    calico: v3.26.4
+    nginx-ingress-controller: v1.8.4
     kubernetes-dashboard: v2.7.0
-    local-path-provisioner: v0.0.24
-    crictl: v1.27.1
+    local-path-provisioner: v0.0.25
+    crictl: v1.28.0
   v1.28.3:
-    calico: v3.26.1
-    nginx-ingress-controller: v1.8.1
+    calico: v3.26.4
+    nginx-ingress-controller: v1.8.4
     kubernetes-dashboard: v2.7.0
-    local-path-provisioner: v0.0.24
-    crictl: v1.27.1
+    local-path-provisioner: v0.0.25
+    crictl: v1.28.0
+  v1.28.4:
+    calico: v3.26.4
+    nginx-ingress-controller: v1.9.4
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.25
+    crictl: v1.28.0
 
 
 # After any change, please run scripts/thirdparties/sync.py
