--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -60,6 +60,11 @@ docker:
     version_rhel8: 19.03*
     version_rhel9: 20.10*
     version_debian: 5:20.10.*
+  v1.26.11:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_rhel9: 20.10*
+    version_debian: 5:20.10.*
   v1.27.1:
     version_rhel: 19.03*
     version_rhel8: 19.03*
@@ -70,12 +75,22 @@ docker:
     version_rhel8: 19.03*
     version_rhel9: 20.10*
     version_debian: 5:20.10.*
+  v1.27.8:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_rhel9: 20.10*
+    version_debian: 5:20.10.*
   v1.28.0:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_rhel9: 20.10*
     version_debian: 5:20.10.*
   v1.28.3:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_rhel9: 20.10*
+    version_debian: 5:20.10.*
+  v1.28.4:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_rhel9: 20.10*
@@ -103,13 +118,19 @@ containerd:
     version_debian: 1.6.*
   v1.26.7:
     version_debian: 1.6.*
+  v1.26.11:
+    version_debian: 1.6.*
   v1.27.1:
     version_debian: 1.6.*
   v1.27.4:
     version_debian: 1.6.*
+  v1.27.8:
+    version_debian: 1.6.*
   v1.28.0:
     version_debian: 1.6.*
   v1.28.3:
+    version_debian: 1.6.*
+  v1.28.4:
     version_debian: 1.6.*
 containerdio:
   v1.23.1:
@@ -167,6 +188,11 @@ containerdio:
     version_rhel8: 1.6*
     version_rhel9: 1.6*
     version_debian: 1.6.*
+  v1.26.11:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+    version_debian: 1.6.*
   v1.27.1:
     version_rhel: 1.6*
     version_rhel8: 1.6*
@@ -177,12 +203,22 @@ containerdio:
     version_rhel8: 1.6*
     version_rhel9: 1.6*
     version_debian: 1.6.*
+  v1.27.8:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+    version_debian: 1.6.*
   v1.28.0:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
     version_debian: 1.6.*
   v1.28.3:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+    version_debian: 1.6.*
+  v1.28.4:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
