--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 ]
 keywords = ["kubernetes", "devops", "administration", "helm"]
 dependencies = [
-    "PyYAML==6.0",
+    "PyYAML==6.0.*",
     "deepmerge==1.0.*",
     "fabric==2.6.*",
     "jinja2==3.1.*",
