--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ dependencies = [
     "python-dateutil==2.8.*",
     "deepdiff==6.2.*",
     "ordered-set==4.1.*",
-    # cryptography is a transitive dependency of paramiko. Fix version to avoid unexpected deprecation warnings.
-    "cryptography==39.0.*",
+    # Each time cryptography version is updated, need to regenerate scripts/ci/custom-hooks/hook-cryptography.py
+    "cryptography==41.0.7",
     "paramiko==2.11.*",
     "jsonschema==4.17.*",
     "typing_extensions==4.7.*",
@@ -57,6 +57,7 @@ mypy = [
     "types-python-dateutil==2.*",
     "types-paramiko==2.*",
     "types-jsonschema==4.*",
+    "types-pyinstaller==6.2.0.*",
 ]
 
 # Auxiliary executable roughly equivalent to python -m kubemarine
