--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -1,5 +1,6 @@
 # This section can be changed manually, but it is also synchronized automatically with the 'compatibility_map' section below.
 kubernetes_versions:
+# To remove docker shim support once 1.23 is removed. https://kubernetes.io/blog/2020/12/02/dockershim-faq/#when-will-dockershim-be-removed
   v1.23:
     supported: true
   v1.24:
