--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -30,6 +30,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: collect_kubernetes_versions
     env:
+      KUBERNETES_VERSION: ${{ matrix.kubernetes-version }}
       cluster_yaml_file: ./ci/default_cluster.yaml
     strategy:
       fail-fast: false
@@ -63,9 +64,6 @@ jobs:
         run: |
           sudo apt update && sudo apt install -y systemd
           sudo systemctl start systemd-journald.service	
-         # TODO: change to kubemarine runtime values feature
-      - name: Set kubernetes version to cluster.yaml
-        run: sed -i "s/<KUBERNETES_VERSION>/${{ matrix.kubernetes-version }}/" ${{ env.cluster_yaml_file }}
       - name: Check Iaas
         id: test_check_iaas
         run: kubemarine check_iaas -c ${{ env.cluster_yaml_file }}  --dump-location ./results/check_iaas_dump/
