--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -136,7 +136,7 @@ jobs:
         run: kubemarine check_paas -c ${{ env.cluster_yaml_file }} --dump-location ./results/check_paas_dump/
       - name: Get events kubectl
         if: failure()
-        run: kubectl get events --sort-by='.metadata.creationTimestamp' -A
+        run: sudo kubectl get events --sort-by='.metadata.creationTimestamp' -A
       - name: Collect journalctl logs
         if: failure()
         run: |
